crates/ars-components/src/selection/listbox/snapshots/ars_components__selection__listbox__tests__listbox_content_multi_invalid_active.snap
---
source: crates/ars-components/src/selection/listbox/mod.rs
expression: snapshot_attrs(&api.content_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-focus-visible",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "listbox",
            ),
        ),
        (
            Aria(
                ActiveDescendant,
            ),
            String(
                "lb-item-bravo",
            ),
        ),
        (
            Aria(
                Invalid,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "lb-label",
            ),
        ),
        (
            Aria(
                MultiSelectable,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Orientation,
            ),
            String(
                "vertical",
            ),
        ),
        (
            Aria(
                Required,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "lb-description lb-error-message",
            ),
        ),
        (
            Id,
            String(
                "lb-content",
            ),
        ),
        (
            Role,
            String(
                "listbox",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
