crates/ars-components/src/selection/listbox/snapshots/ars_components__selection__listbox__tests__listbox_description.snap
---
source: crates/ars-components/src/selection/listbox/mod.rs
expression: snapshot_attrs(&api.description_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "listbox",
            ),
        ),
        (
            Id,
            String(
                "lb-description",
            ),
        ),
    ],
    styles: [],
}
