crates/ars-components/src/selection/listbox/snapshots/ars_components__selection__listbox__tests__listbox_item_indicator_selected.snap
---
source: crates/ars-components/src/selection/listbox/mod.rs
expression: "snapshot_attrs(&api.item_indicator_attrs(&key(\"bravo\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item-indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "listbox",
            ),
        ),
        (
            Data(
                "ars-selected",
            ),
            Bool(
                true,
            ),
        ),
    ],
    styles: [],
}
