crates/ars-components/src/selection/listbox/snapshots/ars_components__selection__listbox__tests__listbox_item_selected_highlighted.snap
---
source: crates/ars-components/src/selection/listbox/mod.rs
expression: "snapshot_attrs(&api.item_attrs(&key(\"bravo\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-highlighted",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "listbox",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "selected",
            ),
        ),
        (
            Data(
                "ars-value",
            ),
            String(
                "Bravo",
            ),
        ),
        (
            Aria(
                Selected,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "lb-item-bravo",
            ),
        ),
        (
            Role,
            String(
                "option",
            ),
        ),
    ],
    styles: [],
}
