crates/ars-components/src/selection/listbox/snapshots/ars_components__selection__listbox__tests__listbox_item_text.snap
---
source: crates/ars-components/src/selection/listbox/mod.rs
expression: "snapshot_attrs(&api.item_text_attrs(&key(\"bravo\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item-text",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "listbox",
            ),
        ),
        (
            Id,
            String(
                "lb-item-bravo-text",
            ),
        ),
    ],
    styles: [],
}
