crates/ars-components/src/selection/listbox/snapshots/ars_components__selection__listbox__tests__listbox_label.snap
---
source: crates/ars-components/src/selection/listbox/mod.rs
expression: snapshot_attrs(&api.label_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "listbox",
            ),
        ),
        (
            Id,
            String(
                "lb-label",
            ),
        ),
    ],
    styles: [],
}
