crates/ars-components/src/selection/listbox/snapshots/ars_components__selection__listbox__tests__listbox_loading_sentinel_loading.snap
---
source: crates/ars-components/src/selection/listbox/mod.rs
expression: "snapshot_attrs(&api.loading_sentinel_attrs().expect(\"sentinel attrs\"))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-loading",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "loading-sentinel",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "listbox",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
