crates/ars-components/src/selection/listbox/snapshots/ars_components__selection__listbox__tests__listbox_root_invalid.snap
---
source: crates/ars-components/src/selection/listbox/mod.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-invalid",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "listbox",
            ),
        ),
    ],
    styles: [],
}
